# bep-agent

./: .env.example  .gitignore  CONTRIBUTING.md  DOCX_WRITER_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OUTLINE_LEARNING_README.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  __version__.py  bep_processor.py  config.py  demo_simple.py  document_loader.py  docx_writer.py  main.py  outline_generator.py  pyproject.toml  requirements.txt  setup.cfg  test_installation.py  test_sample.json  ui_styling.py  vector_store.py
assets/: README.md
backend/: requirements.txt  run.py
backend/app/: __init__.py  config.py  schemas.py
backend/app/routes/: auth.py  comments.py  goals.py  projects.py  reports.py  tidp.py
backend/models/: comment.py  goal.py  project.py  tidp.py  user.py
data/bep_samples/: README.md  Sample_Office_Building_BEP.docx
frontend/: package-lock.json  package.json
frontend/public/: test.html
frontend/src/: App.js  SimpleApp.js
frontend/src/api/: client.js
frontend/src/components/Auth/: Login.js  Register.js
frontend/src/components/Comments/: Comments.js
frontend/src/components/Common/: ErrorBoundary.js  LoadingSpinner.js
frontend/src/components/Dashboard/: Dashboard.js
frontend/src/components/Goals/: Goals.js
frontend/src/components/Layout/: Layout.js
frontend/src/components/Projects/: ProjectDetail.js  Projects.js
frontend/src/components/TIDP/: TIDP.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/theme/: theme.js
src/: __init__.py  interactive_refiner.py  outline_suggester.py  structure_extractor.py  structure_indexer.py
tests/: __init__.py  test_docx_writer.py  test_outline_merger.py  test_structure_extractor.py
