[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bep-agent"
version = "1.3.0"
description = "AI-Powered BIM Execution Plan Generator"
readme = "README.md"
authors = [
    {name = "Atkinsrealis", email = "bep-agent@atkinsrealis.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "faiss-cpu>=1.7.4",
    "langchain-text-splitters>=0.0.1",
    "sentence-transformers>=2.2.2",
    "python-docx==1.1.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/cosentinor/bep-agent"
"Bug Tracker" = "https://github.com/cosentinor/bep-agent/issues"
Documentation = "https://github.com/cosentinor/bep-agent/blob/main/README.md"

[project.scripts]
docx_writer = "docx_writer:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
