[metadata]
name = bep-agent
version = 1.3.0
description = AI-Powered BIM Execution Plan Generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Atkinsrealis
author_email = bep-agent@atkinsrealis.com
url = https://github.com/cosentinor/bep-agent
project_urls =
    Bug Tracker = https://github.com/cosentinor/bep-agent/issues
    Documentation = https://github.com/cosentinor/bep-agent/blob/main/README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai>=1.0.0
    faiss-cpu>=1.7.4
    langchain-text-splitters>=0.0.1
    sentence-transformers>=2.2.2
    python-docx==1.1.0
    streamlit>=1.28.0
    python-dotenv>=1.0.0
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    PyPDF2>=3.0.0
    pdfplumber>=0.9.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    docx_writer = docx_writer:cli

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
